opam-version: "2.0"
maintainer:   "pf341@cam.ac.uk"
authors:      ["Patrick Ferris"]
license:      "ISC"
homepage:     "https://github.com/carboncredits/retirement-db"
bug-reports:  "https://github.com/carboncredits/retirement-db/issues"
dev-repo:     "git+https://github.com/carboncredits/retirement-db.git"
build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune"                 {>= "2.9.0"}
  "atdgen"               {>= "2.10.0"} # For the OCaml bindings generation
  "atdts"                {>= "2.10.0"} # For the typescript bindings generation
  "ppx_irmin"            {>= "3.4.2"}
]
synopsis: "Project metadata JSON codec and types"
pin-depends:[
  # For TS parameterised types!
  ["atd.dev" "https://github.com/ahrefs/atd#245d302788b88d01283640df4963c1463d12c890"]
  ["atdgen.dev" "https://github.com/ahrefs/atd#245d302788b88d01283640df4963c1463d12c890"]
  ["atdts.dev" "https://github.com/ahrefs/atd#245d302788b88d01283640df4963c1463d12c890"]
]