opam-version: "2.0"
maintainer:   "pf341@cam.ac.uk"
authors:      ["Patrick Ferris"]
license:      "ISC"
homepage:     "https://github.com/carboncredits/retirement-db"
bug-reports:  "https://github.com/carboncredits/retirement-db/issues"
dev-repo:     "git+https://github.com/carboncredits/retirement-db.git"
build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune"                 {>= "2.9.0"}
  "atdgen"               {>= "2.10.0"} # For the OCaml bindings generation
  "atdts"                {>= "2.10.0"} # For the typescript bindings generation
  "ppx_irmin"            {= "dev"}
]
synopsis: "Project metadata JSON codec and types"
pin-depends:[
  [ "ppx_irmin.dev" "git+https://github.com/patricoferris/irmin#1b0e377d3833b8d186f2856eb8b71415d3520df2" ]
]