opam-version: "2.0"
maintainer:   "pf341@cam.ac.uk"
authors:      ["Patrick Ferris"]
license:      "ISC"
homepage:     "https://github.com/carboncredits/retirement-db"
bug-reports:  "https://github.com/carboncredits/retirement-db/issues"
dev-repo:     "git+https://github.com/carboncredits/retirement-db.git"
build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune"                 {>= "2.9.0"}
  "atdgen"               {>= "2.10.0"} # For the OCaml bindings generation
  "atdts"                {>= "2.10.0"} # For the typescript bindings generation
  "ppx_irmin"            {= "3.6.0"}
  "repr"                 {= "0.6.0"}
]
synopsis: "Project metadata JSON codec and types"
pin-depends:[
  [ "repr.0.6.0" "git+https://github.com/mirage/repr#2b260367d8073a421e38be4e564d2c1931d15ee0" ]
]