opam-version: "2.0"
maintainer:   "pf341@cam.ac.uk"
authors:      ["Patrick Ferris"]
license:      "ISC"
homepage:     "https://github.com/carboncredits/retirement-db"
bug-reports:  "https://github.com/carboncredits/retirement-db/issues"
dev-repo:     "git+https://github.com/carboncredits/retirement-db.git"
build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune"               {>= "2.9.0"}
  "retirement-data"    {= version}
  "irmin"              {= "dev"}
  "irmin-fs"           {= "dev"}
  "eio_main"           {>= "0.5"}
  "ptime"
  "multihash-digestif"
  "bisect_ppx"         {>= "2.8.1"} # Not sure why I need this?
  "cohttp-eio"
  "logs"
  "dune-build-info"
  "ppx_deriving_yojson"
  "mdx"                {with-test}
  "alcotest"           {with-test}
]
synopsis: "Project metadata server"
pin-depends:[
  [ "irmin-watcher.dev" "git+https://github.com/patricoferris/irmin-watcher#ecfabf46357d19316f969bf8b8c578355b322c55" ]
  [ "irmin.dev" "git+https://github.com/patricoferris/irmin#ecfabf46357d19316f969bf8b8c578355b322c55" ]
  [ "irmin-fs.dev" "git+https://github.com/patricoferris/irmin#ecfabf46357d19316f969bf8b8c578355b322c55" ]
  # Eio.0.7 Support
  [ "cohttp-eio.dev" "git+https://github.com/mirage/ocaml-cohttp#ec82f50f261b53d73839c22b6fd600273489503dit"]
]
