opam-version: "2.0"
maintainer:   "pf341@cam.ac.uk"
authors:      ["Patrick Ferris"]
license:      "ISC"
homepage:     "https://github.com/carboncredits/retirement-db"
bug-reports:  "https://github.com/carboncredits/retirement-db/issues"
dev-repo:     "git+https://github.com/carboncredits/retirement-db.git"
build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune"               {>= "2.9.0"}
  "retirement-data"    {= version}
  "irmin"              {= "dev"}
  "irmin-fs"           {= "dev"}
  "eio_main"           {>= "0.7"}
  "ptime"
  "multihash-digestif"
  "bisect_ppx"         {>= "2.8.1"} # Not sure why I need this?
  "cohttp-eio"
  "logs"
  "dune-build-info"
  "ppx_deriving_yojson"
  "ppx_fields_conv"
  "ppx_csv_conv"
  "mdx"                {with-test}
  "alcotest"           {with-test}
]
synopsis: "Project metadata server"
pin-depends:[
  [ "repr.dev" "git+https://github.com/mirage/repr#2b260367d8073a421e38be4e564d2c1931d15ee0"]
  [ "irmin-watcher.dev" "git+https://github.com/patricoferris/irmin-watcher#d0e92b4ba5631b5f4dc0f3c00d97e79542dba45d" ]
  [ "irmin.dev" "git+https://github.com/patricoferris/irmin#ecfabf46357d19316f969bf8b8c578355b322c55" ]
  [ "irmin-fs.dev" "git+https://github.com/patricoferris/irmin#ecfabf46357d19316f969bf8b8c578355b322c55" ]
  # Eio.0.7 Support
  [ "http.dev" "git+https://github.com/mirage/ocaml-cohttp#ec82f50f261b53d73839c22b6fd600273489503d" ]
  [ "cohttp-eio.dev" "git+https://github.com/mirage/ocaml-cohttp#ec82f50f261b53d73839c22b6fd600273489503d" ]
]
