opam-version: "2.0"
maintainer:   "pf341@cam.ac.uk"
authors:      ["Patrick Ferris"]
license:      "ISC"
homepage:     "https://github.com/carboncredits/retirement-db"
bug-reports:  "https://github.com/carboncredits/retirement-db/issues"
dev-repo:     "git+https://github.com/carboncredits/retirement-db.git"
build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune"               {>= "2.9.0"}
  "retirement-data"    {= version}
  "irmin-fs"           {>= "3.6.0"}
  "ptime"
  "multihash-digestif"
  "bisect_ppx"         {>= "2.8.1"} # Not sure why I need this?
  "cohttp-lwt-unix"    {>= "5.0.0"}
  "logs"
  "dune-build-info"
  "ppx_deriving_yojson"
  "ppx_fields_conv"
  "ppx_csv_conv"
  "mdx"                {with-test}
  "alcotest"           {with-test}
]
synopsis: "Project metadata server"
pin-depends:[
  [ "repr.dev" "git+https://github.com/mirage/repr#2b260367d8073a421e38be4e564d2c1931d15ee0"]
]
