(test
 (name test)
 (deps
  (source_tree versions))
 (libraries eio_main alcotest retirement irmin-git.unix))

(rule
 (deps %{project_root}/src/bin/main.exe)
 (targets dummy.out)
 (action
  (with-stdout-to
   dummy.out
   (run %{project_root}/src/bin/main.exe dummy))))

(rule
 (alias runtest)
 (action
  (diff dummy.json dummy.out)))

(data_only_dirs versions)
