(test
 (name test)
 (modules test)
 (deps
  (source_tree versions))
 (libraries lwt.unix alcotest retirement irmin.mem irmin-fs.unix))

(test
 (name test_csv)
 (modules test_csv)
 (deps
  (source_tree versions))
 (libraries lwt.unix alcotest retirement irmin.mem irmin-fs.unix))

(test
 (name concurrent)
 (modules concurrent)
 (libraries lwt.unix alcotest retirement irmin-fs.unix))

(mdx
 (deps
  (package retirement))
 (package retirement)
 (files README.md))

(rule
 (deps %{project_root}/src/bin/main.exe)
 (targets dummy.out)
 (action
  (with-stdout-to
   dummy.out
   (run
    %{project_root}/src/bin/main.exe
    dummy
    --timestamp=2022-12-09T21:27:07-00:00))))

(rule
 (alias runtest)
 (action
  (diff dummy.json dummy.out)))

(data_only_dirs versions)
